--- a/03 ■► JS DOM/e-Commerce website project (03-10-2023 to 03-12-2023)/Ploranza.scss
+++ b/03 ■► JS DOM/e-Commerce website project (03-10-2023 to 03-12-2023)/Ploranza.scss
@@ -1383,14 +1383,49 @@
 // ◄◄|==========|==========|==========|==========|==========|==========|►►
 // ►►►►►►►►►►| #(SECTION - AUTHENTICATION) start |•
 #section-auth {
+    @include test-border();
+    @include df-center();
+    flex-direction: column;
     width: 1424px;
-    @include test-border;
-    .section-auth__gobackhome {}
+    height: 750px;
+    position: relative;
+    transform: translateX(-50%);
+    left: 50%;
+    background: linear-gradient(to right, rgb(0,128,255), rgb(0,0,255), rgb(0,128,255));
+    .section-auth__gobackhome {
+        z-index: 20;
+        position: absolute;
+        top: 10%;
+        left: 5%;
+        transform: translate(-50%, -50%);
+        display: block !important;
+        border: 2px solid rgb(16,16,16);
+        background-color: rgb(255,255,255);
+        color: rgb(16,16,16);
+        width: 60px;
+        height: 60px;
+        border-radius: 15px;
+        cursor: pointer;
+        font-size: 24px;
+        transition: $ease-fx;
+        &:hover {
+            border: 2px solid rgb(255,255,0);
+            background: radial-gradient(rgb(255,255,255), rgb(255,255,0));
+            color: rgb(255,255,255);
+            filter: drop-shadow(0px 0px 15px rgb(255,255,0));
+        }
+    }
     .section-auth__buttons {
+        border: 1px solid red;
+        width: 50%;
+        background-color: rgb(255,255,255);
         &--login {}
         &--register {}
     }
     .section-auth__container {
+        border: 1px solid red;
+        width: 50%;
+        background-color: rgb(255,255,255);
         &--login {
             &_email {
                 .login--email {}
